# Neural-Networks-

./: CMakeLists.txt  README.md
src/: ActivationFunction.cpp  ActivationFunction.h  Adam.cpp  Adam.h  CMakeLists.txt  CTensor.cpp  CTensor.h  DoubleTensor.cpp  DoubleTensor.h  Init.cpp  Init.h  Linear.h  LossFunction.cpp  LossFunction.h  Module.cpp  Module.h  NeuralNetworks.cpp  NeuralNetworks.h  Operation.cpp  Operation.h  Optimizer.cpp  Optimizer.h  Tensor.cpp  Tensor.h  main.cpp
